# RubiksCube

./: .gitignore  CMakeLists.txt  README.md
Light/: light.cpp  light.h
Texture/: texture.cpp  texture.h
enc_temp_folder/71dcc4efa77e5e089943822bc69b60/: RubiksCube.cpp
include/: Cube.h  RubiksCube.h  SubCube.h  light.h
shaders/: fshader.glsl  pickingf.glsl  pickingv.glsl  vshader.glsl
src/: Cube.cpp  RubiksCube.cpp  SubCube.cpp  light.cpp  main.cpp
